# LPG-Distributor-API

./: .env.example  .pylintrc  alembic.ini  pyproject.toml  requirements.txt
app/: main.py
app/config/: database.py  server.py  settings.py
app/core/application/request/: base_request.py
app/core/application/response/: base_response.py
app/core/domain/: entity.py  exception.py  id.py  repository.py  transaction.py
app/core/infrastructure/: mapper.py  router.py  sql_repository.py  transaction.py
app/migrations/: env.py
app/migrations/versions/: 1566f638bd8e_create_tank_tank_types_tables.py  50fad180f847_init.py  9175bddab573_fix.py  d5e112383b02_fix.py  e815dc7da281_client_user_relationship.py  f623441a9cd1_add_clients_table.py
app/modules/client/application/request/: create.py  create_params.py
app/modules/client/application/response/: create.py  get_many.py  get_one.py
app/modules/client/domain/: entity.py  repository.py
app/modules/client/infrastructure/: mapper.py  model.py  repository.py  router.py  service.py
app/modules/tank/application/request/: create_params.py  get_many_params.py
app/modules/tank/application/response/: create.py  get_many.py  get_one.py  get_types.py
app/modules/tank/domain/: entity.py  repository.py
app/modules/tank/infrastructure/: mapper.py  model.py  repository.py  router.py  service.py
app/modules/user/domain/: entity.py  repository.py  values.py
app/modules/user/infrastructure/: mapper.py  model.py  repository.py  router.py  service.py
app/utils/: add_routers.py  handle_service_result.py
(+12 files in other folders)
